<resources>
    <string name="app_name">TECBox</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="server">"Server"</string>
    <string name="username">"Username"</string>
    <string name="packageid">"Package ID"</string>
    <string name="packagesuccess">"Delivered"</string>
    <string name="packagefail">"Failed"</string>
    <string name="packagereturned">"Returned"</string>
    <string name="status">"Status"</string>
    <string name="invalidid">"Invalid ID"</string>
    <string name="success">"Package Status Updated"</string>
</resources>
