<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/packid"
        android:layout_width="274dp"
        android:layout_height="43dp"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:hint="@string/packageid"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/delivered"
        android:layout_width="153dp"
        android:layout_height="136dp"
        android:layout_marginTop="300dp"
        android:text="@string/packagesuccess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/returned"
        android:layout_width="99dp"
        android:layout_height="48dp"
        android:layout_marginTop="490dp"
        android:layout_marginEnd="60dp"
        android:text="@string/packagereturned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/failed"
        android:layout_width="95dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="490dp"
        android:text="@string/packagefail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/status"
        android:layout_width="77dp"
        android:layout_height="38dp"
        android:layout_marginBottom="80dp"
        android:text="@string/status"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>